mobile view done

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta name=”viewport” content=”width=device-width, initial-scale=1”>
     <title>
-        Lab-01
+        Lab-04a
     </title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
-    
+
 </head>
 
 <body>
@@ -19,10 +19,17 @@
     <section id="b">b</section>
     <section id="c">c</section>
     <section id="d">d</section>
-    <section id="e">e</section>
-    <section id="f">f</section>
-    <section id="g">g</section>
-    <section id="h">h</section>
+
+    <div class="boxes">
+        <section id="e">e</section>
+        <section id="f">f</section>
+    </div>
+    <div class="boxes">
+        <section id="g">g</section>
+        <section id="h">h</section>
+    </div>
+
     <footer>i</footer>
 </body>
+
 </html>
