--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="e">e</section>
         <section id="f">f</section>
     </div>
-    <div class="boxes">
+    <div class="boxes2">
         <section id="g">g</section>
         <section id="h">h</section>
     </div>
